# r6-audio-radar

r6-audio-radar/: README.md  pyproject.toml
r6-audio-radar/r6_audio_radar/: __init__.py  classify.py  features.py  gui.py  runner.py  train.py
r6-audio-radar/r6_audio_radar/models/: README.md  elev_model.pkl  enc_elev.pkl  enc_event.pkl  enc_material.pkl  event_model.pkl  labels.csv  material_model.pkl
r6-audio-radar/r6_audio_radar/models/audio_m4a/: unclippedr6-00.00.24.000-00.00.26.000.m4a  unclippedr6-00.00.26.000-00.00.28.000.m4a  unclippedr6-00.00.28.000-00.00.30.000.m4a  unclippedr6-00.00.30.000-00.00.32.000.m4a  unclippedr6-00.00.32.000-00.00.34.000.m4a  unclippedr6-00.00.34.000-00.00.36.000.m4a  unclippedr6-00.00.36.000-00.00.38.000.m4a  unclippedr6-00.00.38.000-00.00.40.000.m4a  unclippedr6-00.00.40.000-00.00.42.000.m4a  unclippedr6-00.00.42.000-00.00.44.000.m4a  unclippedr6-00.00.44.000-00.00.46.000.m4a  unclippedr6-00.00.46.000-00.00.48.000.m4a  unclippedr6-00.00.48.000-00.00.50.000.m4a  unclippedr6-00.00.50.000-00.00.52.000.m4a  unclippedr6-00.00.52.000-00.00.54.000.m4a  unclippedr6-00.00.54.000-00.00.56.000.m4a  unclippedr6-00.01.48.000-00.01.50.000.m4a  unclippedr6-00.01.50.000-00.01.52.000.m4a  unclippedr6-00.01.52.000-00.01.54.000.m4a  unclippedr6-00.01.54.000-00.01.56.000.m4a  unclippedr6-00.01.56.000-00.01.58.000.m4a  unclippedr6-00.01.58.000-00.02.00.000.m4a  unclippedr6-00.02.38.000-00.02.40.000.m4a  unclippedr6-00.02.40.000-00.02.42.000.m4a  unclippedr6-00.02.42.000-00.02.44.000.m4a  unclippedr6-00.02.44.000-00.02.46.000.m4a  (+74 more)
(+23 files in other folders)
